# annotator

./: Cargo.toml  README.md
src/: annotator.rs  annotator_panel.rs  annotator_panel_shadow.rs  application.rs  clipboard.rs  context.rs  context_menu.rs  dpi.rs  egui_input.rs  egui_off_screen_render.rs  font.rs  global.rs  gpu.rs  icon.rs  layout.rs  main.rs  primary_toolbar.rs  secondly_toolbar.rs  serial.rs  sub_surface_view.rs  surface_view.rs  view.rs  window.rs  wp_fractional_scaling.rs  wp_viewporter.rs  xdg_popup_view.rs
src/annotator/: arrow.rs  blur.rs  cursor.rs  drop_down_box.rs  ellipse.rs  eraser.rs  free_line_based.rs  image_based.rs  marker_pen.rs  mosaic.rs  pencil.rs  rectangle.rs  rectangle_based.rs  serial_number.rs  straight_line.rs  straight_line_based.rs  svg_button.rs  text.rs  watermark.rs
src/view/: sub_surface_view.rs  surface_view.rs  xdg_popup_view.rs
